--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "classnames": "^2.3.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-use-websocket": "^4.5.0",
     "sass": "^1.69.4"
   },
   "devDependencies": {
